--- a/www/frontend/css/login.css
+++ b/www/frontend/css/login.css
@@ -8,7 +8,7 @@
 .form {
 	position: relative;
 	z-index: 1;
-	background: #ffffff;
+	background: #F8F9FB;
 	max-width: 360px;
 	margin: 0 auto 100px;
 	padding: 45px;
@@ -18,7 +18,7 @@
 .form input {
 	font-family: 'Roboto', sans-serif;
 	outline: 0;
-	background: #f2f2f2;
+	background: #fff;
 	width: 100%;
 	border: 0;
 	margin: 0 0 15px;
@@ -30,7 +30,7 @@
 	font-family: 'Roboto', sans-serif;
 	text-transform: uppercase;
 	outline: 0;
-	background: #4caf50;
+	background: #B7494E;
 	width: 100%;
 	border: 0;
 	padding: 15px;
@@ -43,7 +43,7 @@
 .form button:hover,
 .form button:active,
 .form button:focus {
-	background: #43a047;
+	background: rgb(150, 60, 65);
 }
 .form .message {
 	margin: 15px 0 0;
@@ -55,7 +55,7 @@
 	display: none;
 }
 .form .message a {
-	color: #4caf50;
+	color: #B7494E;
 	text-decoration: none;
 }
 .form .register-form {
@@ -96,11 +96,7 @@
 	color: #ef3b3a;
 }
 body {
-	background: #76b852; /* fallback for old browsers */
-	background: -webkit-linear-gradient(right, #76b852, #8dc26f);
-	background: -moz-linear-gradient(right, #76b852, #8dc26f);
-	background: -o-linear-gradient(right, #76b852, #8dc26f);
-	background: linear-gradient(to left, #76b852, #8dc26f);
+	background: #F8F9FB;
 	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
